--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.vs/la_buena_madera/v16/.suo
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
